# Spectre

./: CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  main.cpp
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
tracer/: CMakeLists.txt
tracer/src/: Compilation.cpp  Compilation.h  CpuInfo.cpp  CpuInfo.h  HeapAlloc.h  MemCheck.cpp  RunMassif.sh  RunMemcheck.sh  RunPerf.sh  RunStrace.sh  main.cpp  spy.cpp
tui/: CMakeLists.txt
tui/src/: Compilation.cpp  Compilation.h  Dashboard.cpp  Dashboard.h  main.cpp
